[fix/#308] store 검색 로직 수정